# ab_proxy_design

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mock/: Dockerfile.dev  main.py
src/: Dockerfile.dev  main.py
src/config/: config.py
src/exception/: config_error.py  proxy_error.py
src/model/: request_schema.py
src/service/: http_client_wrapper.py  logging_service.py  proxy_service.py  routing_service.py
