[tool.poetry]
name = "ab_proxy_design"
version = "0.1.0"
description = ""
authors = ["ymdpharm <ymdpharm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
httpx = "^0.22.0"
black = "^22.3.0"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
